@@ -28,6 +28,9 @@
                 <button>Limited time</button>
             </div>
             <div class="flex banners-wrapper">
+                <div class="涌流无止之物-2024-04-09 banner-button">
+                    <img src="images/banners/The_Ever-Flowing_Banner.webp">
+                </div>
                 <div class="真理的壁影 banner-button">
                     <img src="images/banners/Seeker_In_The_Cave_Banner.webp">
                 </div>
@@ -64,7 +67,7 @@
                 <div class="精灵仍在等待 banner-button">
                     <img src="images/banners/The_Changeling_Awaits_Banner.webp">
                 </div>
-                <div class="涌流无止之物 banner-button">
+                <div class="涌流无止之物-2023-12-19 banner-button">
                     <img src="images/banners/The_Ever-Flowing_Banner.webp">
                 </div>
                 <div class="仙子振翅入夜 banner-button">
