@@ -1,3 +1,6 @@
+2024/04/08
+- Added Eternity banner
+
 2024/03/28
 - Added 6 Banner
 
